# e2

./: Cargo.toml  README.md
examples/: draw.rs  snake.rs  sprite.rs
src/: batch_render.rs  bind_cache.rs  color.rs  context.rs  draw.rs  error.rs  frame.rs  growing.rs  layout.rs  lib.rs  math.rs  mesh.rs  mesh_render.rs  pipeline.rs  render_pass.rs  sampler.rs  sprite.rs  sprite_batch.rs  text.rs  texture.rs
src/shader/: batch.wgsl  mesh.wgsl
