[package]
name = "e2"
description = "Lightweight 2D rendering toolbox for WGPU"
version = "0.1.0"
edition = "2021"
license = "MIT / Apache-2.0"
repository = "https://github.com/jazzfool/e2"
keywords = ["graphics", "wgpu", "rendering", "2d"]

[dependencies]
wgpu = "0.13.1"
glam = { version = "0.20", features = ["mint"] }
raw-window-handle = "0.4"
thiserror = "1.0"
pollster = "0.2"
image = "0.24"
crevice = "0.8"
mint = "0.5"
typed-arena = "2.0"
wgpu_glyph = "0.17.0"

[dev-dependencies]
winit = "0.26"
anyhow = "1.0"
rand = "0.8"
futures = "0.3"
